--- a/MacDown/Localization/Base.lproj/MainMenu.xib
+++ b/MacDown/Localization/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="14A261i" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
@@ -194,7 +194,7 @@
                                                 <action selector="insertLt:" target="-1" id="sL8-Qy-kLF"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="&gt;" keyEquivalent="." id="wbb-Cn-yYW">
+                                        <menuItem title=">" keyEquivalent="." id="wbb-Cn-yYW">
                                             <modifierMask key="keyEquivalentModifierMask" shift="YES" control="YES"/>
                                             <connections>
                                                 <action selector="insertGt:" target="-1" id="gWv-bY-uAU"/>
@@ -404,19 +404,19 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="onf-Mq-Pah"/>
-                            <menuItem title="Editor 1:3 Preview" id="VW7-VH-9yl">
+                            <menuItem title="Left 1:3 Right" id="VW7-VH-9yl">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="setEditorOneQuarter:" target="-1" id="kyy-J2-6rx"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Editor 1:1 Preview" keyEquivalent="0" id="hOV-YQ-vzy">
+                            <menuItem title="Left 1:1 Right" keyEquivalent="0" id="hOV-YQ-vzy">
                                 <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                 <connections>
                                     <action selector="setEqualSplit:" target="-1" id="fJH-RN-c01"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Editor 3:1 Preview" id="NZX-Ev-sWt">
+                            <menuItem title="Left 3:1 Right" id="NZX-Ev-sWt">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="setEditorThreeQuarters:" target="-1" id="IEv-Wg-wJA"/>
