--- a/MacDown/Localization/Base.lproj/MPDocument.xib
+++ b/MacDown/Localization/Base.lproj/MPDocument.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="14A261i" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
         <plugIn identifier="com.apple.WebKitIBPlugin" version="5056"/>
     </dependencies>
@@ -11,6 +12,7 @@
                 <outlet property="preview" destination="XJO-AS-uPd" id="0ZO-ec-vWJ"/>
                 <outlet property="splitView" destination="0kv-p9-H4b" id="1EO-mS-VKN"/>
                 <outlet property="window" destination="xOd-HO-29H" id="JIz-fz-R2o"/>
+                <outlet property="wordCount" destination="7qk-8M-bho" id="6zD-RB-elL"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -20,7 +22,7 @@
             <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="0.0" y="300" width="1024" height="578"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
             <value key="minSize" type="size" width="94" height="86"/>
             <view key="contentView" id="gIp-Ho-8D9">
                 <rect key="frame" x="0.0" y="0.0" width="1024" height="578"/>
@@ -30,40 +32,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="578"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <subviews>
-                            <scrollView fixedFrame="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="5HT-Up-YAd">
-                                <rect key="frame" x="0.0" y="0.0" width="513" height="578"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <clipView key="contentView" id="5eJ-HC-3WM">
-                                    <rect key="frame" x="0.0" y="0.0" width="513" height="578"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <textView importsGraphics="NO" richText="NO" findStyle="bar" allowsDocumentBackgroundColorChange="YES" allowsUndo="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" dashSubstitution="YES" smartInsertDelete="YES" id="VLv-r5-dZU">
-                                            <rect key="frame" x="0.0" y="0.0" width="513" height="578"/>
+                            <customView appearanceType="aqua" id="WJx-Xb-9af">
+                                <rect key="frame" x="0.0" y="0.0" width="509" height="578"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <subviews>
+                                    <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5HT-Up-YAd">
+                                        <rect key="frame" x="0.0" y="0.0" width="509" height="578"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <clipView key="contentView" copiesOnScroll="NO" id="5eJ-HC-3WM">
+                                            <rect key="frame" x="0.0" y="0.0" width="509" height="578"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <subviews>
+                                                <textView importsGraphics="NO" richText="NO" horizontallyResizable="YES" findStyle="bar" allowsDocumentBackgroundColorChange="YES" allowsUndo="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" dashSubstitution="YES" smartInsertDelete="YES" id="VLv-r5-dZU">
+                                                    <rect key="frame" x="0.0" y="0.0" width="509" height="578"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <size key="minSize" width="509" height="578"/>
+                                                    <size key="maxSize" width="771" height="10000000"/>
+                                                    <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <size key="minSize" width="509" height="578"/>
+                                                    <size key="maxSize" width="771" height="10000000"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="-2" id="TdC-zV-Jhk"/>
+                                                    </connections>
+                                                </textView>
+                                            </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <size key="minSize" width="513" height="578"/>
-                                            <size key="maxSize" width="771" height="10000000"/>
-                                            <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                            <size key="minSize" width="513" height="578"/>
-                                            <size key="maxSize" width="771" height="10000000"/>
-                                            <connections>
-                                                <outlet property="delegate" destination="-2" id="TdC-zV-Jhk"/>
-                                            </connections>
-                                        </textView>
-                                    </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </clipView>
-                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="3Oj-1c-nVc">
-                                    <rect key="frame" x="-100" y="-100" width="87" height="18"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Ofi-bn-LVK">
-                                    <rect key="frame" x="238" y="0.0" width="16" height="413"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                            </scrollView>
+                                        </clipView>
+                                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="3Oj-1c-nVc">
+                                            <rect key="frame" x="-100" y="-100" width="87" height="18"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </scroller>
+                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="Ofi-bn-LVK">
+                                            <rect key="frame" x="494" y="0.0" width="16" height="0.0"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </scroller>
+                                    </scrollView>
+                                    <button appearanceType="aqua" translatesAutoresizingMaskIntoConstraints="NO" id="7qk-8M-bho">
+                                        <rect key="frame" x="163" y="12" width="184" height="31"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="53s-LN-D0C" userLabel="Width - (180) - Bevel Button - 0 words"/>
+                                            <constraint firstAttribute="height" constant="26" id="QXx-2S-vee"/>
+                                        </constraints>
+                                        <buttonCell key="cell" type="bevel" title="0 words" bezelStyle="regularSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="G8g-rD-963">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="systemBold" size="12"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="cycleWordCountTypes:" target="-2" id="OVL-WO-vQJ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="5HT-Up-YAd" secondAttribute="width" id="1Iu-jp-28s"/>
+                                    <constraint firstAttribute="centerX" secondItem="7qk-8M-bho" secondAttribute="centerX" id="1sv-Jr-LdE"/>
+                                    <constraint firstItem="5HT-Up-YAd" firstAttribute="leading" secondItem="WJx-Xb-9af" secondAttribute="leading" id="B0V-v5-hdB"/>
+                                    <constraint firstAttribute="height" secondItem="5HT-Up-YAd" secondAttribute="height" id="DgM-v8-nGA"/>
+                                    <constraint firstAttribute="bottom" secondItem="7qk-8M-bho" secondAttribute="bottom" constant="15" id="UsQ-7s-X2h"/>
+                                    <constraint firstItem="5HT-Up-YAd" firstAttribute="top" secondItem="WJx-Xb-9af" secondAttribute="top" id="n0c-VL-2ue"/>
+                                </constraints>
+                            </customView>
                             <webView fixedFrame="YES" id="XJO-AS-uPd">
-                                <rect key="frame" x="514" y="0.0" width="510" height="578"/>
+                                <rect key="frame" x="510" y="0.0" width="514" height="578"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <webPreferences key="preferences" defaultFontSize="12" defaultFixedFontSize="12">
                                     <nil key="identifier"/>
